altered font color of .art-selecTip-input

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ main {
 
 .art-selecTip-input {
   background: hsl(183, 100%, 15%);
-  color: #fff;
+  color: hsl(189, 41%, 97%);
 }
 
 .art-result {
