--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,6 +42,10 @@ main {
 color: #687B7B;
 }
 
+.art-result {
+  width: 86%;
+}
+
 .art-bill-input,.art-selecTip-input,.art-selectTip-numberOfPeople-input,.art-resul-input {
   font-size: 24px;  
 }
