--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,3 +74,22 @@ color: #687B7B;
 .art-bill-input,.art-selecTip-input,.art-selectTip-numberOfPeople-input,.art-resul-lbl3 {
   font-size: 24px;  
 }
+
+
+#art-bill-input-id {
+  width: 94%;
+  background-image: url(\icon-dollar.svg);
+  background-repeat: no-repeat; 
+  text-align: right;
+  border: hsl(189, 41%, 97%);
+  height: 28px;
+}
+
+.art-selectTip-numberOfPeople-input{
+  width: 94%;
+  background-image: url(\icon-person.svg);
+  background-repeat: no-repeat;
+  position: left; 
+  text-align: right;
+  border: hsl(189, 41%, 97%);
+}
