--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,8 @@ body {
 main {
   height: 539.2px;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 38px;
+
   padding: 7%;
 }
 
@@ -35,7 +36,12 @@ main {
 }
 
 .art-result {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  justify-content: space-around;
   width: 100%;
+  border-radius: 1em;
   background: hsl(183, 100%, 15%);
   padding: 7%;
 }
