--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,8 +4,15 @@
 }
 
 header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 100%;
   height: 124.8px;
   color: hsl(186, 14%, 43%);
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.25em;
 }
 
 body {
@@ -22,7 +29,6 @@ main {
 
 .art-title {
   width: 100%;
-
 }
 
 .art-selecTip-input {
