--- a/CSS/style.css
+++ b/CSS/style.css
@@ -87,6 +87,10 @@ color: #687B7B;
   font-size: 24px;  
 }
 
+.art-bill-input,.art-selectTip-numberOfPeople-input {
+  color: hsl(183, 100%, 15%);
+  font-weight: bold;
+}
 
 #art-bill-input-id {
   width: 94%;
@@ -94,6 +98,9 @@ color: #687B7B;
   background-repeat: no-repeat; 
   text-align: right;
   border: hsl(189, 41%, 97%);
+  color: hsl(183, 100%, 15%);
+  font-weight: bold;
+  font-size: 24px;  
   height: 28px;
 }
 
