--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
   font-weight: 800;
 }
 
+/* tags*/
 header {
   display: flex;
   flex-direction: column;
@@ -27,19 +28,48 @@ main {
   padding: 7%;
 }
 
-.art-title {
-  width: 100%;
-  margin: 10px auto;
+
+/* inputs and outpus */
+.art-bill-input,.art-selecTip-input,.art-selectTip-numberOfPeople-input,.art-resul-lbl3 {
+  font-size: 24px;  
 }
 
+.art-bill-input,.art-selectTip-numberOfPeople-input {
+  color: hsl(183, 100%, 15%);
+  font-weight: bold;
+}
+
+/* inputs */
+#art-bill-input-id {
+  width: 94%;
+  background-image: url(\icon-dollar.svg);
+  background-repeat: no-repeat; 
+  text-align: right;
+  border: hsl(189, 41%, 97%);
+  color: hsl(183, 100%, 15%);
+  font-weight: bold;
+  font-size: 24px;  
+  height: 28px;
+}
+
+
 .art-selecTip-input {
- width: 45% ;
-  height: 45px;
-  margin: 1%;
-  border: none; 
-  border-radius: 7px;
-  background: hsl(183, 100%, 15%);
-  color: hsl(189, 41%, 97%);
+  width: 45% ;
+   height: 45px;
+   margin: 1%;
+   border: none; 
+   border-radius: 7px;
+   background: hsl(183, 100%, 15%);
+   color: hsl(189, 41%, 97%);
+ }
+
+.art-selectTip-numberOfPeople-input{
+  width: 94%;
+  background-image: url(\icon-person.svg);
+  background-repeat: no-repeat;
+  position: left; 
+  text-align: right;
+  border: hsl(189, 41%, 97%);
 }
 
 .art-result {
@@ -51,6 +81,33 @@ main {
   border-radius: 1em;
   background: hsl(183, 100%, 15%);
   padding: 7%;
+}
+
+/* buttons */
+.btnReset {
+  width: 100%;
+  height: 45px;
+  background: hsl(172, 67%, 45%);
+  border: none;
+  border-radius: 7px;
+  color: hsl(183, 100%, 15%);
+  font-size: 24px;  
+  text-transform: uppercase;
+}
+
+
+/* others */
+.art-result div{ 
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+ 
+}
+.art-resul-lbl1{
+  width: 100%;
+  }
+.art-resul-lbl2{
+width: 50%;
 }
 
 .art-resul-lbl1 { 
@@ -69,61 +126,13 @@ main {
 color: #687B7B;
 }
 
-.btnReset {
+.art-title {
   width: 100%;
-  height: 45px;
-  background: hsl(172, 67%, 45%);
-  border: none;
-  border-radius: 7px;
-  color: hsl(183, 100%, 15%);
-  font-size: 24px;  
-  text-transform: uppercase;
+  margin: 10px auto;
 }
 
 .art-result {
   width: 86%;
-}
-
-.art-bill-input,.art-selecTip-input,.art-selectTip-numberOfPeople-input,.art-resul-lbl3 {
-  font-size: 24px;  
-}
-
-.art-bill-input,.art-selectTip-numberOfPeople-input {
-  color: hsl(183, 100%, 15%);
-  font-weight: bold;
-}
-
-#art-bill-input-id {
-  width: 94%;
-  background-image: url(\icon-dollar.svg);
-  background-repeat: no-repeat; 
-  text-align: right;
-  border: hsl(189, 41%, 97%);
-  color: hsl(183, 100%, 15%);
-  font-weight: bold;
-  font-size: 24px;  
-  height: 28px;
-}
-
-.art-selectTip-numberOfPeople-input{
-  width: 94%;
-  background-image: url(\icon-person.svg);
-  background-repeat: no-repeat;
-  position: left; 
-  text-align: right;
-  border: hsl(189, 41%, 97%);
-}
-.art-result div{ 
- display: flex;
- flex-wrap: wrap;
- justify-content: space-between;
- 
-}
-.art-resul-lbl1{
-  width: 100%;
-  }
-.art-resul-lbl2{
-width: 50%;
 }
 /* .art-resul-lbl1{
 width: 100%;
