--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,7 +151,8 @@ width: 100%;
     justify-content: space-evenly; */
     height: 581.2px;
   }
-  
+} 
+
 @media(min-width:768px){
   main {
     display: flex;
@@ -183,4 +184,10 @@ width: 100%;
     margin: 0 auto;
   } 
 }
+@media(min-width:1024px){
+  main{
+  width: 70%;
+  margin: 0 auto;
+  }
 }
+
